# autodeploy

./: .gitignore  README.md  install.sh  pyproject.toml
autodeploy/: __main__.py  cli.py  config.py  git.py  health.py  logger.py  pipeline.py  server.py
templates/: deploy.yaml.example
