[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodeploy"
version = "0.1.0"
description = "Self-hosted auto-deploy via GitHub webhooks"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "flask>=3.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
autodeploy = "autodeploy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autodeploy*"]
